<resources>
    <string name="app_name">Mini App</string>
    <string name="Login">Login</string>
    <string name="email_id">Email id</string>
    <string name="textView">TextView</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="enter_your_email_id">enter your email id</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="registration">Registration</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_Password">enter_your_Password</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_no">enter_your_phone_no</string>
    <string name="type">type</string>
    <string name="enter_your_type">enter_your_type</string>
    <string name="enter">enter</string>
    <string name="name">name</string>
    <string name="enter_your_name">enter_your_name</string>
    <string name="enter_your_email">enter_your_email</string>
    <string name="email">Email</string>
    <string name="show_details">Show Details</string>
    <string name="textView1">TextView</string>
    <string name="edit_details">Edit Details</string>
    <string name="Enter_your_email">Enter your email</string>
    <string name="Enter_your_password">Enter your password</string>
    <string name="update">Update</string>

    <string name="delete">Delete</string>
    <string name="enter_email">enter_email</string>
    <string name="name2">name2</string>
    <string name="enter_name">enter_name</string>
</resources>
